# DogBio

./: .gitignore  README.md  how_to_db_setting.docx  so_test.mdb
DogIdentification/: DogIdentification.sln
DogIdentification/DogIdentification/: CameraMgr.cpp  CameraMgr.h  ChangePassword.cpp  ChangePassword.h  CheckPassword.cpp  CheckPassword.h  DbAccess.cpp  DbAccess.h  DogIdentification.aps  DogIdentification.cpp  DogIdentification.h  DogIdentification.rc  DogIdentification.vcxproj  DogIdentification.vcxproj.filters  DogIdentificationDlg.cpp  DogIdentificationDlg.h  DogRegister.cpp  DogRegister.h  EditDogInfo.cpp  EditDogInfo.h  EditPassword.cpp  EditPassword.h  Login.cpp  Login.h  MainDialog.cpp  MainDialog.h  SearchDogInfo.cpp  SearchDogInfo.h  StorageMgr.cpp  StorageMgr.h  UserPassword.cpp  UserPassword.h  Util.h  resource.h  stdafx.h
DogIdentification/DogIdentification/include/: error_define.h  my_define.h
DogIdentification/DogIdentification/libs/inc/: hancom_wb.h
DogIdentification/DogIdentification/libs/lib/: hancom_wb_Debug.lib  hancom_wb_x64_Debug.lib
DogIdentification/DogIdentification/res/: DogIdentification.rc2
DogIdentification/DogIdentification/source/access_mgr/inc/: AccessMgr.h
DogIdentification/DogIdentification/source/access_mgr/src/: AccessMgr.cpp
DogIdentification/DogIdentification/source/camera_mgr/inc/: CameraMgr.h
DogIdentification/DogIdentification/source/camera_mgr/src/: CameraMgr.cpp
DogIdentification/DogIdentification/source/secure_storage/inc/: SecureStorage.h
DogIdentification/DogIdentification/source/secure_storage/src/: SecureStorage.cpp
DogIdentification/DogIdentification/source/src/access_manager/: AccessMgr.cpp
DogIdentification/DogIdentification/source/src/camera_manager/: CameraMgr.cpp
DogIdentification/x64/Release/: DogIdentification.iobj  DogIdentification.ipdb
EditPassword/: EditPassword.sln
EditPassword/EditPassword/: ChangePassword.cpp  ChangePassword.h  CheckPassword.cpp  CheckPassword.h  EditPassword.cpp  EditPassword.h  EditPassword.rc  EditPassword.vcxproj  EditPassword.vcxproj.filters  EditPasswordDlg.cpp  EditPasswordDlg.h  resource.h
EditPassword/EditPassword/res/: EditPassword.rc2
SearchDogInfo/: SearchDogInfo.sln
SearchDogInfo/SearchDogInfo/: CameraMgr.cpp  CameraMgr.h  Cameramgr.h  OpenCam.cpp  OpenCam.h  OpenCamera.cpp  OpenCamera.h  RCb09960  SearchDogInfo.cpp  SearchDogInfo.h  SearchDogInfo.rc  SearchDogInfo.vcxproj  SearchDogInfo.vcxproj.filters  SearchDogInfoDlg.cpp  SearchDogInfoDlg.h  framework.h  pch.h  resource.h
SearchDogInfo/SearchDogInfo/res/: SearchDogInfo.rc2
TestCode/: TestCode.sln  TestCode_jp.sln
TestCode/TestCode/: CameraMgr.cpp  Dog-info_manager.cpp  DogRegister.cpp  DogRegister.h  RCa20656  ReadMe.txt  TestCode.cpp  TestCode.h  TestCode.rc  TestCode.vcxproj  TestCode.vcxproj.filters  TestCodeDlg.cpp  TestCodeDlg.h  UserPassword.cpp  UserPassword.h  resource.h  stdafx.cpp  stdafx.h
TestCode/TestCode/include/: en_string.h  error_define.h  ko_string.h  my_define.h  my_system.h
[호윤]강아지 프로젝트/AutonomousDrivingMonitor_work/AutonomousDrivingMonitor/: AutonomousDrivingMonitor.sln
[호윤]강아지 프로젝트/AutonomousDrivingMonitor_work/AutonomousDrivingMonitor/AutonomousDrivingMonitor/: AutonomousDrivingMonitor.cpp  AutonomousDrivingMonitor.h  AutonomousDrivingMonitor.rc  AutonomousDrivingMonitor.vcxproj  AutonomousDrivingMonitor.vcxproj.filters  AutonomousDrivingMonitorDlg.cpp  AutonomousDrivingMonitorDlg.h  resource.h
[호윤]강아지 프로젝트/DogBiometrics_work/DogBiometircs/: DogBiometircs.sln
[호윤]강아지 프로젝트/DogBiometrics_work/DogBiometircs/DogBiometircs/: DogBiometircs.cpp  DogBiometircs.h  DogBiometircs.rc  DogBiometircs.vcxproj  DogBiometircs.vcxproj.filters  DogBiometircsDlg.cpp  DogBiometircsDlg.h  Resource.h
catkin_ws/src/darknet_ros/darknet/: Makefile
catkin_ws/src/monitorsvr/: CMakeLists.txt  CMakeLists_variables.txt  package.xml  project_config.h.in
catkin_ws/src/monitorsvr/include/monitorsvr/: os_linux.h  sys_error.h
catkin_ws/src/monitorsvr/src/: tracker-svr.cpp
catkin_ws/src/monitorsvr/src/monitor_svr/inc/: MonitorSvr.h
catkin_ws/src/monitorsvr/src/monitor_svr/src/: MonitorSvr.cpp
catkin_ws/src/monitorsvr/src/signal_handler/inc/: SignalHandler.h
catkin_ws/src/monitorsvr/src/signal_handler/src/: SignalHandler.cpp
catkin_ws/src/monitorsvr/src/utils/src/: Utils.cpp
catkin_ws/src/ydlidar/: CMakeLists.txt  package.xml
catkin_ws/src/ydlidar/launch/: lidar.launch
catkin_ws/src/ydlidar/sdk/include/: CYdLidar.h  ydlidar_driver.h
catkin_ws/src/ydlidar/sdk/samples/: main.cpp
catkin_ws/src/ydlidar/sdk/src/: CYdLidar.cpp
catkin_ws/src/ydlidar/src/: backup_file  subsc.cpp  subscriber.cpp  ydlidar_node.cpp
dogdog191002/: dogdog191002.sln
dogdog191002/dogdog191002/: ReadMe.txt  dogdog191002.cpp  dogdog191002.h  dogdog191002.rc  dogdog191002.vcxproj  dogdog191002.vcxproj.filters  dogdog191002Dlg.cpp  dogdog191002Dlg.h  resource.h  stdafx.cpp
dogdog191002/dogdog191002/res/: dogdog191002.rc2
dogdog191002/dogdog191002/source/inc/: TestDlg.h
dogdog191002/dogdog191002/source/source/: TestDlg.cpp
hancommds/devel/: .catkin  .rosinstall  setup.sh
hancommds/devel/lib/monitorsvr/: monitorsvr_Linux_x86_64_release
hancommds/devel/lib/pkgconfig/: monitorsvr.pc
hancommds/src/monitorsvr/: CMakeLists.txt  CMakeLists_variables.txt  project_config.h.in
hancommds/src/monitorsvr/src/: tracker-svr.cpp
monitorsvr/src/: tracker-svr.cpp
monitorsvr/src/utils/inc/: Utils.h
tracker-monitor/: tracker-monitor.sln
tracker-monitor/tracker-monitor/: ClientSocket.cpp  ClientSocket.h  ReadMe.txt  SocketThread.cpp  SocketThread.h  resource.h  stdafx.cpp  stdafx.h  tracker-monitor.cpp  tracker-monitor.h  tracker-monitor.rc  tracker-monitor.vcxproj  tracker-monitor.vcxproj.filters  tracker-monitorDlg.cpp  tracker-monitorDlg.h
tracker-monitor/tracker-monitor/res/: trackermonitor.rc2
ydlidar_ws/devel/: .catkin  local_setup.sh  setup.sh
ydlidar_ws/devel/lib/pkgconfig/: ydlidar_ros.pc
ydlidar_ws/devel/lib/ydlidar_ros/: subscriber  ydlidar_client  ydlidar_node
(+21 files in other folders)
